# looped_nanoVLM

./: .gitignore  BATCH_CREATION_ANALYSIS.md  CLAUDE.md  LOOPED_TRANSFORMER_PLAN.md  evaluation.py  generate.py  merge_eval_results.py  pyproject.toml  run_evaluation.py  train.py
data/: advanced_datasets.py  collators.py  custom_transforms.py  data_utils.py  datasets.py  processors.py
eval/: benchmark-inference.py  benchmark_suite.py  lmms_eval_wrapper.py  measure_vram.py
models/: config.py  language_model.py  modality_projector.py  utils.py  vision_language_model.py  vision_transformer.py
slurm/: train_job_single.slurm
tests/: test_language_model.py  test_looped_transformer.py  test_vision_language_model.py
utils/: plot_eval_results.py  run_checkpoint_evaluations.py
