[project]
name = "looped-nanovlm"
version = "0.1.0"
description = "A looped VLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "huggingface-hub>=1.3.4",
    "numpy>=2.2.6",
    "pillow>=12.1.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
    "wandb>=0.24.0",
]
